--- a/style.css
+++ b/style.css
@@ -855,23 +855,12 @@ header h1 {
     
     .file-preview {
         width: 100%;
-        height: 0;
-        padding-bottom: 100%;
-        position: relative;
-        overflow: hidden;
+        height: 100px;
+        object-fit: cover;
         border-radius: 4px;
         margin-bottom: 8px;
         background: #f5f5f5;
-    }
-    
-    .file-preview img,
-    .file-preview video {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        cursor: pointer;
     }
     
     .file-name {
